--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,15 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
 
+    // image loading
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
+    // Material Design
+    implementation 'androidx.compose.material:material:1.0.0-beta01'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
+
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
