--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     // Material design icons
     implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
 
+    // navigation
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
